MES-254 - Composed Production Orders - Validation logic